# FFmpegPlayer-Android

./: CMakeLists.txt  build.gradle
src/androidTest/java/com/willxing/ffmpegplayer/: ExampleInstrumentedTest.java
src/main/: AndroidManifest.xml
src/main/cpp/: AVPacketQueue.cpp  AVPacketQueue.h  AudioOpensl.cpp  AudioOpensl.h  DecodeTools.cpp  DecodeTools.h  Log.h  Player.cpp  Player.h  ffmpeg_player.cpp  ffmpeg_player.h
src/main/cpp/include/libavcodec/: jni.h
src/main/cpp/include/libavfilter/: avfilter.h
src/main/cpp/include/libavformat/: avformat.h
src/main/cpp/include/libavutil/: audio_fifo.h  frame.h
src/main/cpp/include/libswresample/: version.h
src/main/java/com/willxing/ffmpegplayer/: MainActivity.java
src/main/res/layout/: activity_main.xml
src/test/java/com/willxing/ffmpegplayer/: ExampleUnitTest.java
